Update Tabla de Herramientas Matco Tools.html

--- a/Tabla de Herramientas Matco Tools.html
+++ b/Tabla de Herramientas Matco Tools.html
@@ -206,7 +206,7 @@
         <h2><a href="Herramientas Matco Tools Videos.html">Próxima página</a></h2>
     </div>
     <div>
-        <h2><a href="Proyecto Final Herramientas Matco Tools HTML tarea.html">Página anterior</a></h2>
+        <h2><a href="index.html">Página anterior</a></h2>
     </div>
 
 </body>
